# ws

./: .gitignore  ADDING_NEW_TOOLS.md  Cargo.toml  README.md  RELEASE.md  build.rs  generate-fresh-sample.sh  generate-sample-demo.sh  install.sh  populate_database.sql  test_data.sql  uninstall.sh  version.txt
.nomion/: state.json
.nomion/st8/templates/: templates.json  test_template.tera
docs/: _config.yml  api-reference.md  contributing.md  documentation.md  examples.md  getting-started.md  index.md  installation.md  ldiff-guide.md  refac-guide.md  scrap-guide.md  st8-guide.md  testing.md  unscrap-guide.md  usage.md
schemas/: architecture.schema.json  directives.schema.json  features.schema.json  metrics.schema.json  progress.schema.json  project.schema.json  tasks.schema.json  testing.schema.json
schemas/examples/: architecture.example.json  directives.example.json  features.example.json  metrics.example.json  progress.example.json  project.example.json  tasks.example.json  testing.example.json
src/: interactive_tree.rs  lib.rs  logging.rs  mcp_protocol.rs  mcp_server.rs  mcp_server.rs.backup  nomion_state.rs  workspace_state.rs
src/code_analysis/: mod.rs  search.rs  transform.rs
src/entities/: api_handlers.rs  api_models.rs  audit.rs  conversation_manager.rs  crud.rs  database.rs  doc_generator.rs  git_integration.rs  migration.rs  mod.rs  models.rs  note_links.rs  notes.rs  relationships.rs  schema_models.rs  schema_traits.rs  session_models.rs  state_machine.rs  validation.rs
src/ldiff/: ldiff_common.rs  mod.rs
src/refac/: binary_detector.rs  cli.rs  file_ops.rs  progress.rs  rename_engine.rs
src/scrap/: mod.rs
src/st8/: mod.rs  st8_common.rs  templates.rs  wstemplate.rs
src/static/: ade-app.js  ade-main.css  ade.html  app.js  dashboard.html  models.js  style.css
src/templates/: claude_md.tera  features_md.tera
svelte-dashboard/: package-lock.json  package.json  vite.config.js
svelte-dashboard/.ws/: project.db
svelte-dashboard/src/: App.svelte  app.css  main.js  stores.js
svelte-dashboard/src/components/: AnalyticsInsights.svelte  AnalyticsInsights.svelte.bak  EntityExplorer.svelte  EntityExplorer.svelte.bak  FeatureManagement.svelte  FeatureManagement.svelte.bak  FeatureMetrics.svelte  FeatureMetrics.svelte.bak  Header.svelte  Header.svelte.bak  IssuesAndDiagnostics.svelte  IssuesAndDiagnostics.svelte.bak  Overview.svelte  Overview.svelte.bak  SessionReplay.svelte  SessionReplay.svelte.bak  Settings.svelte  Settings.svelte.bak  TaskKanban.svelte  TaskSummary.svelte  TaskSummary.svelte.bak  TestingQuality.svelte  TestingQuality.svelte.bak  WorkspaceIDE.svelte  WorkspaceIDE.svelte.bak  WorkspaceIDE.svelte.bak2
svelte-dashboard/src/services/: api.js  websocket.js
svelte-dashboard/src/styles/: _base.scss  _mixins.scss  _semantic-tokens.scss  _utilities.scss  _variables.scss  main.scss
svelte-dashboard/src/styles/components/: _buttons.scss  _cards.scss  _charts.scss  _data-display.scss  _dialogs.scss  _forms.scss  _kanban.scss  _loading.scss  _navigation.scss  _overview.scss  _stats.scss  _tables.scss
svelte-dashboard/src/styles/layout/: _grid.scss  _layout.scss
tests/: api_endpoint_tests.rs  code_analysis_tests.rs  completion_tests.rs  comprehensive_test_data_generator.rs  crud_operations_tests.rs  dashboard_tests.rs  database_system_tests.rs  end_to_end_insite_tests.rs  entity_manager_tests.rs  entity_relationship_tests.rs  integration_tests.rs  mcp_protocol_tests.rs  model_serialization_tests.rs  refac_concurrency_tests.rs  refac_diff_preview_tests.rs  refac_edge_cases_tests.rs  refac_empty_directory_tests.rs  refac_encoding_tests.rs  scrap_advanced_integration_tests.rs  scrap_integration_tests.rs  scrap_integration_tests.rs.bak  simple_dashboard_test.rs  st8_integration_tests.rs  st8_template_tests.rs
